--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </a>
     </div>
     <h1 class="headerText" id="wedate">Will You Be Ma Valentine,sunshine? 🥺</h1>
-    <img class="image" src="https://github.com/NikhilMarko03/resources/blob/main/happy1.gif?raw=true" alt="heyy" id="mainImg" />
+    <img class="image" src="https://github.com/NikhilMarko03/resources/blob/main/happy1.gif?raw=true" alt="ALL MINE" id="mainImg" />
     <div class="flex" id="btns">
       <button
         class="button"
