--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="flex f-aps">
       <p>
         Made with ❤️ by
-        <a rel="noopener" href="https://www.linkedin.com/in/mjhasan21/" target="_blank">ur wolf</a>
+        <a rel="noopener" href="/" target="_blank">ur wolf</a>
         </p>
       </p>
       <a rel="noopener" target="_blank" href="https://github.com/junayed-hasan/
